--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <!-- secondbgcolor #323946-->
     <!-- text color #fff  #6fda50-->
     <!-- main color #0ef-->
-    <!-- from 10:19 to 11:41-->
     <title>JUN JUN B. ELPA</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,7 +28,7 @@
         <div class="home-content">
             <h3>It's me</h3>
             <h1>ELPA JUN JUN B.</h1>
-            <h3>And I'm a <span class="multiple-text"></span></h3>
+            <h3>And I'm <span class="multiple-text"></span></h3>
             <p>Currently enrolled at the Abra State Institute of Sciences and Technology (ASIST)
                 soon to be <br>University of Abra (UA)</p>
             <!-- from 12:32 to 13:22-->
@@ -55,7 +54,7 @@
                 <img src="logo/gmail-logo-24.png" class="picture">
                 <div class="about-layer">
                     <h4>EMAIL</h4>
-                    <P>21jj@asist.edu.ph</P>
+                    <P>21jjelpa@asist.edu.ph</P>
                 </div>
             </div>
 
@@ -87,7 +86,7 @@
                 <img src="logo/contact-solid-24.png" class="picture">
                 <div class="about-layer">
                     <h4>CONTACT</h4>
-                    <P>23456789</P>
+                    <P>09555386177</P>
                 </div>
             </div>
 
