--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="about-container">
 
             <div class="about-box">
-                <img src="logo/gmail-logo-24.png" class="picture">
+                <img src="logo1/email.gif" class="picture">
                 <div class="about-layer">
                     <h4>EMAIL</h4>
                     <P>21jjelpa@asist.edu.ph</P>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="about-box">
-                <img src="logo/home-regular-24.png" class="picture">
+                <img src="logo1/home (1).gif" class="picture">
                 <div class="about-layer">
                     <h4>ADDRESS</h4>
                     <P>ALINAYA, PIDIGAN, ABRA, 2806</P>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="about-box">
-                <img src="logo/cake-regular-24.png" class="picture">
+                <img src="logo1/birthday.gif" class="picture">
                 <div class="about-layer">
                     <h4>BIRTHDAY</h4>
                     <P>FEBRUARY 05 2002</P>
@@ -75,15 +75,15 @@
             </div>
 
             <div class="about-box">
-                <img src="logo/male-sign-regular-24.png" class="picture">
+                <img src="logo1/sex.gif" class="picture">
                 <div class="about-layer">
-                    <h4>GENDER</h4>
+                    <h4>SEX</h4>
                     <P>MALE</P>
                 </div>
             </div>
 
             <div class="about-box">
-                <img src="logo/contact-solid-24.png" class="picture">
+                <img src="logo1/phone.gif" class="picture">
                 <div class="about-layer">
                     <h4>CONTACT</h4>
                     <P>09555386177</P>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="about-box">
-                <img src="logo/school-solid-24.png" class="picture">
+                <img src="logo1/university.gif" class="picture">
                 <div class="about-layer">
                     <h4>CURRENT SCHOOL</h4>
                     <P>ABRA STATE INSTITUE OF SCIENCES AND TECHNOLOGY (ASIST) <BR>SOON TO BE UNIVERSITY OF ABRA
@@ -100,7 +100,7 @@
             </div>
 
             <div class="about-box">
-                <img src="logo/graduation-solid-24.png" class="picture">
+                <img src="logo1/graduation.gif" class="picture">
                 <div class="about-layer">
                     <h4>SCHOOLS ATTENDED</h4>
                     <P>ELEMENTARY: SUYO PILOT ELEMENTARY SCHOOL (SPES) <BR> <BR></BR> JUNIOR HIGH SCHOOL: SUYO NATIONAL
@@ -110,7 +110,7 @@
             </div>
 
             <div class="about-box">
-                <img src="logo/bowl-hot-regular-24.png" class="picture">
+                <img src="logo1/cooking.gif" class="picture">
                 <div class="about-layer">
                     <h4>FAVORITE FOOD</h4>
                     <P>FRENCH FRIES</P>
@@ -118,7 +118,7 @@
             </div>
 
             <div class="about-box">
-                <img src="logo/message-rounded-dots-regular-24.png" class="picture">
+                <img src="logo1/speech-bubble.gif" class="picture">
                 <div class="about-layer">
                     <h4>MY FAVORITE QUOTATION</h4>
                     <P>"EXPECT DISSAPOINMENT AND YOU'LL NERVER BE DISSAPOINTED"</P>
