--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 soon to be <br>University of Abra (UA)</p>
             <!-- from 12:32 to 13:22-->
             <div class="social-media">
-                <a href="#"><img src="logo/facebook-logo-24.png"></a>
-                <a href="#"><img src="logo/tiktok-logo-24.png"></a>
-                <a href="#"><img src="logo/instagram-logo-24.png"></a>
-                <a href="#"><img src="logo/youtube-logo-24.png"></a>
+                <a href="https://www.facebook.com/jjuunn.aple?mibextid=ZbWKwL"><img src="logo/facebook-logo-24.png"></a>
+                <a href="tiktok.com/@izukuroronoa"><img src="logo/tiktok-logo-24.png"></a>
+                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Finstagram.com%2Fizukujun%3Figshid%3DZGUzMzM3NWJiOQ%253D%253D%26fbclid%3DIwAR0MujV-5rxZQFcYEXOVlicl4FVhf4g8MJ_OOjLUWSZgE4Z1fHWxYTYWFtA&h=AT0X3bNWq-P0ytH73chA_RsYUCHHMioHFYbgcoQ4jhJ8YOO8cn4lqlBq6dWBd8ZwzkFJkW5EWm9sFROZnYo8uZyDxugAY97xXPT0lusWSbWCzxjkbJBlZrzxpRok73ViG_VkiA"><img src="logo/instagram-logo-24.png"></a>
+                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.youtube.com%2F%40elpajunjun7350%3Ffbclid%3DIwAR1Qp1JlOeUw0m92pBN5dhiQX0aGzndNUryPhuiYGeVyNX4iB5zGVmnjcAE&h=AT0X3bNWq-P0ytH73chA_RsYUCHHMioHFYbgcoQ4jhJ8YOO8cn4lqlBq6dWBd8ZwzkFJkW5EWm9sFROZnYo8uZyDxugAY97xXPT0lusWSbWCzxjkbJBlZrzxpRok73ViG_VkiA"><img src="logo/youtube-logo-24.png"></a>
             </div>
             <a href="#contact" class="btn">CONTACT ME</a>
         </div>
